# subimage-search

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  styles.scss  vite.config.js
.github/workflows/: ci.yml
src/: drag_drop.rs  image.rs  image_input.rs  lib.rs
src/components/: image_input.rs  search_params.rs  search_results.rs  search_summary.rs
