[package]
name = "subimage_search"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
console_log = "1.0.0"
log = "0.4.26"
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

web-sys = { version = "0.3", features = [
    "Document", 
    "Element", 
    "HtmlElement", 
    "Window",
    "HtmlInputElement", 
    "FileList", 
    "File", 
    "FileReader",
    "HtmlImageElement", 
    "Event", 
    "DragEvent", 
    "DataTransfer",
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d", 
    "ImageData",
    "console"
]}
gloo = { version = "0.11.0", features = ["utils"] }
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
#oneshot = "0.1.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
